Adding some folders

--- a/WebServer/WebContent/index.html
+++ b/WebServer/WebContent/index.html
@@ -4,7 +4,7 @@
 		<script src="destino.js"></script>
 	</head>
 	<body>
-		<form id="origem-destino" action="" method="post">
+		<form id="origem-destino" action="/VoosBaratos/LoadGraph" method="post">
 			<select id="origem" onchange="excluiOpcao('destino','origem')" name="origem">
 
 			</select>
