change the value sent by request

--- a/WebServer/WebContent/index.html
+++ b/WebServer/WebContent/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Voos Baratos</title>
-		<script src="destino.js"></script>
+		<script src="WEB-INF/destino.js"></script>
 	</head>
 	<body>
 		<form id="origem-destino" action="/VoosBaratos/LoadGraph" method="post">
